objects/nSBA__Contact_Liabilities_Notes_Payable__c.object
<CustomObject>
    <description>For use in SBA UI. Notes Payable for primary contact.</description>
    <fields>
        <fullName>nSBA__Contact_Name__c</fullName>
        <description>Contact Name</description>
        <inlineHelpText>Contact Name</inlineHelpText>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Liabilities Notes Payable</relationshipLabel>
        <relationshipName>Contact_Liabilities_Notes_Payable</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nSBA__Current_Balance__c</fullName>
        <description>Current balance of notes payable</description>
        <inlineHelpText>Current balance of notes payable</inlineHelpText>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__How_Secured_Type_Of_Collateral__c</fullName>
        <description>How secured or endorsed type of collateral</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>How secured or endorsed type of collateral</inlineHelpText>
        <label>How Secured Type Of Collateral</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Name_And_Addresses_Of_Noteholders__c</fullName>
        <description>Names and addresses of noteholder(s)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Names and addresses of noteholder(s)</inlineHelpText>
        <label>Name And Addresses Of Noteholders</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Original_Balance__c</fullName>
        <description>Original Balance of Notes Payable</description>
        <inlineHelpText>Original Balance of Notes Payable</inlineHelpText>
        <label>Original Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Payment_Amount__c</fullName>
        <description>Payment amount for notes payable</description>
        <inlineHelpText>Payment amount for notes payable</inlineHelpText>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Payment_Frequency__c</fullName>
        <description>Frequency of payment</description>
        <inlineHelpText>Frequency of payment</inlineHelpText>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Liabilities Notes Payable</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Liabilities Notes Payable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Liabilities Notes Payable</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>